fixed css issue with screen overflow on smaller screens causing scrolling when there shouldnt be

--- a/client/src/Pages/App/App.css
+++ b/client/src/Pages/App/App.css
@@ -1,18 +1,25 @@
 .background {
-  height: 100vh;
+  margin-top: 63px;
+  height: 100%;
   width: 100%;
   background-image: url("/images/darkBackground.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
+  display: block;
 }
 
 .Home {
-  height: calc(100% - 64px);
+  height: 100%;
   width: 100%;
-  margin-top: 64px;
   margin-left: auto;
   margin-right: auto;
 }
+
+@media only screen and (max-width: 600px){
+  .background{
+    margin-top: 56px;
+  }
+} 
 
 /*# sourceMappingURL=App.css.map */
